{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 7,
  "lineage": "842c24e9-cadf-a194-5cf4-2b7010455dea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247826514568:internet-gateway/igw-03d4a079755b08479",
            "id": "igw-03d4a079755b08479",
            "owner_id": "247826514568",
            "tags": {
              "Name": "internet-gateway-terraform"
            },
            "tags_all": {
              "Name": "internet-gateway-terraform"
            },
            "vpc_id": "vpc-035b6c58349d77b5a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247826514568:route-table/rtb-001f2a6dd0ee35f16",
            "id": "rtb-001f2a6dd0ee35f16",
            "owner_id": "247826514568",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d4a079755b08479",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-terraform"
            },
            "tags_all": {
              "Name": "route-table-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-035b6c58349d77b5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092de46ddbf3ff1db",
            "route_table_id": "rtb-001f2a6dd0ee35f16",
            "subnet_id": "subnet-0d77fedc5ba896f29"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247826514568:security-group/sg-0c656c74a6b35878f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c656c74a6b35878f",
            "ingress": [],
            "name": "security-group-terraform",
            "name_prefix": "",
            "owner_id": "247826514568",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035b6c58349d77b5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247826514568:subnet/subnet-0d77fedc5ba896f29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d77fedc5ba896f29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247826514568",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-terraform"
            },
            "tags_all": {
              "Name": "subnet-terraform"
            },
            "vpc_id": "vpc-035b6c58349d77b5a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247826514568:vpc/vpc-035b6c58349d77b5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0965911a877d4d077",
            "default_route_table_id": "rtb-0169b6a3b7cdca270",
            "default_security_group_id": "sg-03edeed946174956d",
            "dhcp_options_id": "dopt-0717c4148981811d3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035b6c58349d77b5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0169b6a3b7cdca270",
            "owner_id": "247826514568",
            "tags": {
              "Name": "vpc-terraform"
            },
            "tags_all": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}